@@ -49,7 +49,7 @@ typedef struct gfxMutex {
 	osMutexId id;
 } gfxMutex;
 
-typedef osThreadId			gfxThreadHandle;
+typedef osThreadId			gThread;
 
 #define DECLARE_THREAD_STACK(name, sz)			uint8_t name[1];	// Some compilers don't allow zero sized arrays. Let's waste one byte
 #define DECLARE_THREAD_FUNCTION(fnName, param)	gThreadreturn fnName(void* param)
@@ -79,7 +79,7 @@ gBool gfxSemWaitI(gfxSem* psem);
 void gfxSemSignal(gfxSem* psem);
 void gfxSemSignalI(gfxSem* psem);
 
-gfxThreadHandle gfxThreadCreate(void* stackarea, size_t stacksz, gThreadpriority prio, DECLARE_THREAD_FUNCTION((*fn),p), void* param);
+gThread gfxThreadCreate(void* stackarea, size_t stacksz, gThreadpriority prio, DECLARE_THREAD_FUNCTION((*fn),p), void* param);
 #define gfxYield()					osThreadYield()
 #define gfxThreadMe()				osThreadGetId()
 #define gfxThreadClose(thread)		{}
