@@ -42,7 +42,7 @@ typedef osSemaphoreId_t		gfxSem;
 
 typedef osMutexId_t 		gfxMutex;
 
-typedef osThreadId_t		gfxThreadHandle;
+typedef osThreadId_t		gThread;
 
 #define DECLARE_THREAD_STACK(name, sz)			uint8_t name[1];	// Some compilers don't allow zero sized arrays. Let's waste one byte
 #define DECLARE_THREAD_FUNCTION(fnName, param)	gThreadreturn fnName(void* param)
@@ -72,7 +72,7 @@ gBool gfxSemWait(gfxSem* psem, gDelay ms);
 #define gfxSemSignal(psem)		osSemaphoreRelease(*(psem))
 #define gfxSemSignalI(psem)		osSemaphoreRelease(*(psem))
 
-gfxThreadHandle gfxThreadCreate(void* stackarea, size_t stacksz, gThreadpriority prio, DECLARE_THREAD_FUNCTION((*fn),p), void* param);
+gThread gfxThreadCreate(void* stackarea, size_t stacksz, gThreadpriority prio, DECLARE_THREAD_FUNCTION((*fn),p), void* param);
 #define gfxYield()					osThreadYield()
 #define gfxThreadMe()				osThreadGetId()
 #define gfxThreadClose(thread)		{}
