@@ -92,8 +92,8 @@ gTicks gfxSystemTicks(void) {
 	return ts.tv_sec * 1000UL + ts.tv_nsec / 1000000;
 }
 
-gfxThreadHandle gfxThreadCreate(void *stackarea, size_t stacksz, gThreadpriority prio, DECLARE_THREAD_FUNCTION((*fn),p), void *param) {
-	gfxThreadHandle		th;
+gThread gfxThreadCreate(void *stackarea, size_t stacksz, gThreadpriority prio, DECLARE_THREAD_FUNCTION((*fn),p), void *param) {
+	gThread		th;
 	(void)				stackarea;
 	(void)				stacksz;
 	(void)				prio;
@@ -110,7 +110,7 @@ gfxThreadHandle gfxThreadCreate(void *stackarea, size_t stacksz, gThreadpriority
 	return th;
 }
 
-gThreadreturn gfxThreadWait(gfxThreadHandle thread) {
+gThreadreturn gfxThreadWait(gThread thread) {
 	gThreadreturn	retval;
 
 	if (pthread_join(thread, &retval))
