@@ -103,7 +103,7 @@ gSemcount gfxSemCounter(gfxSem *pSem) {
 }
 */
 
-gfxThreadHandle gfxThreadCreate(void *stackarea, size_t stacksz, gThreadpriority prio, DECLARE_THREAD_FUNCTION(*fn,p), void *param) {
+gThread gfxThreadCreate(void *stackarea, size_t stacksz, gThreadpriority prio, DECLARE_THREAD_FUNCTION(*fn,p), void *param) {
 	(void)	stackarea;
 	HANDLE	thd;
 
@@ -116,7 +116,7 @@ gfxThreadHandle gfxThreadCreate(void *stackarea, size_t stacksz, gThreadpriority
 	return thd;
 }
 
-gThreadreturn gfxThreadWait(gfxThreadHandle thread) {
+gThreadreturn gfxThreadWait(gThread thread) {
 	DWORD	ret;
 
 	WaitForSingleObject(thread, INFINITE);
